--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,62 +2,36 @@
   background-size: cover;
   min-height: 400px;
   padding-bottom: 60px;
+  //margin-left: 20px;
+  //margin-right: 20px;
   display: block;
 }
-
 .search-bar {
   line-height: 5.4;
 }
-
 .banner h1 {
   font-size: 63px;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.6);
   margin: 0px;
   padding-top: 189px;
-  color: black;
+  color: white;
   font-weight: bold;
 }
-
 .banner h2 {
   color: #000000;
 }
-
 .banner p {
   font-size: 25px;
   font-weight: lighter;
-  color: gray;
+  color: rgba(255, 255, 255, 1);
   margin-bottom: 50px;
 }
-
 .search-bar {
   text-align: center;
 }
-
 #dateRange {
   width: 212px;
 }
-
 .banner-artwork{
   height: 320px;
 }
-
-.title-text{
-  color: black;
-  font-size: 35px;
-  font-weight: heavy;
-  display: flex;
-padding-left: 125px;
-
-}
-.title-vp{
-  color: gray;
-  display: flex;
-padding-left: 63px;
-
-}
-.title-search{
-  display: flex;
-padding-left: 93px;
-
-}
-
