--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -62,6 +62,14 @@
           <div class="content">
             <div class="content-group">
               <strong>
+                City:
+              </strong>
+              <div class="values">
+                <%= @artwork.location %>
+              </div>
+            </div>
+            <div class="content-group">
+              <strong>
                 Dimensions:
               </strong>
               <div class="values">
@@ -78,16 +86,9 @@
                 <%= @artwork.weight %>kg
               </div>
             </div>
-            <div class="content-group">
-              <strong>
-                City:
-              </strong>
-              <div class="values">
-                <%= @artwork.location %>
-              </div>
-            </div>
+
             <h3>
-              Title jrqiogj
+              Description
             </h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio quo soluta incidunt iste nam? Nobis aliquid quam adipisci, ducimus, alias quo inventore vitae nam a
