--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,8 +2,8 @@
       <div class = "container">
         <div class = "row">
 
-        <div class="col-md-4">
-
+        <div class="col-xs-4">
+          <div class="footer-column">
            <ul>
             <h4 class="heading_tpbrp">Join Us</h4>
             <li>
@@ -16,35 +16,38 @@
               <%= link_to "FAQ", root_path %>
             </li>
           </ul>
+          </div>
         </div>
 
-        <div class="col-md-4">
-
-         <ul>
-          <h4 class="heading_tpbrp">Artist</h4>
-          <li>
-            <%= link_to "Become an artist", root_path %>
-          </li>
-          <li>
-            <%= link_to "All the artists", root_path %>
-          </li>
-        </ul>
+        <div class="col-xs-4">
+          <div class="footer-column">
+           <ul>
+            <h4 class="heading_tpbrp">Artist</h4>
+            <li>
+              <%= link_to "Become an artist", root_path %>
+            </li>
+            <li>
+              <%= link_to "All the artists", root_path %>
+            </li>
+          </ul>
+          </div>
       </div>
 
-      <div class="col-md-4 ">
-
-        <ul>
-          <h4 class="heading_tpbrp">About us</h4>
-          <li>
-            <%= link_to "Facebook", root_path %>
-          </li>
-          <li>
-            <%= link_to "Instagram", root_path %>
-          </li>
-          <li>
-            <%= link_to "Press", root_path %>
-          </li>
-        </ul>
+      <div class="col-xs-4 ">
+          <div class="footer-column">
+            <ul>
+              <h4 class="heading_tpbrp">About us</h4>
+              <li>
+                <%= link_to "Facebook", root_path %>
+              </li>
+              <li>
+                <%= link_to "Instagram", root_path %>
+              </li>
+              <li>
+                <%= link_to "Press", root_path %>
+              </li>
+            </ul>
+          </div>
       </div>
 
     </div>
